--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,18 @@
 .App-body-sidebar {
   word-wrap: break-word;
 }
+
+.App-body-content__wrapper {
+  display: flex;
+  justify-content: center;
+  padding: 24px 32px;
+}
+
+.App-body-content {
+  background: gray;
+  color: white;
+  width: fit-content;
+  height: fit-content;
+  padding: 8px 16px;
+  border-radius: 6px;
+}
